script/parser/farl_parser.go
// Code generated from FaRl.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // FaRl

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "", "", "'print'", "'fail'", "'transfer'", "'from'", "'to'", "'then'",
	"'send'", "'keep'", "'remaining'", "'all'", "'take'", "'limit'", "'allow'",
	"'overdraft'", "'up'", "'reserve'", "'in'", "'split'", "'as'", "'var'",
	"'balance'", "'of'", "'meta'", "'key'", "'set'", "'transaction'", "'metadata'",
	"'account'", "'asset'", "'number'", "'monetary'", "'portion'", "'string'",
	"'+'", "'-'", "'%'", "'['", "']'", "'{'", "'}'", "'.'", "':'", "'*'", "'='",
}
var symbolicNames = []string{
	"", "NEWLINE", "WHITESPACE", "PRINT", "FAIL", "TRANSFER", "FROM", "TO",
	"THEN", "SEND", "KEEP", "REMAINING", "ALL", "TAKE", "LIMIT", "ALLOW", "OVERDRAFT",
	"UP", "RESERVE", "IN", "SPLIT", "AS", "VAR", "BALANCE", "OF", "META", "KEY",
	"SET", "TRANSACTION", "METADATA", "TY_ACCOUNT", "TY_ASSET", "TY_NUMBER",
	"TY_MONETARY", "TY_PORTION", "TY_STRING", "OP_ADD", "OP_SUB", "PERCENT",
	"LBRACK", "RBRACK", "LBRACE", "RBRACE", "DOT", "COLON", "STAR", "EQ", "RATIO",
	"VARIABLE_NAME", "ACCOUNT", "ASSET", "NUMBER", "STRING",
}

var ruleNames = []string{
	"monetary", "literal", "expression", "portion", "source", "type_", "varDecl",
	"metadataValue", "metadataEntry", "sendClause", "statement", "script",
}

type FaRlParser struct {
	*antlr.BaseParser
}

// NewFaRlParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *FaRlParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewFaRlParser(input antlr.TokenStream) *FaRlParser {
	this := new(FaRlParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "FaRl.g4"

	return this
}

// FaRlParser tokens.
const (
	FaRlParserEOF           = antlr.TokenEOF
	FaRlParserNEWLINE       = 1
	FaRlParserWHITESPACE    = 2
	FaRlParserPRINT         = 3
	FaRlParserFAIL          = 4
	FaRlParserTRANSFER      = 5
	FaRlParserFROM          = 6
	FaRlParserTO            = 7
	FaRlParserTHEN          = 8
	FaRlParserSEND          = 9
	FaRlParserKEEP          = 10
	FaRlParserREMAINING     = 11
	FaRlParserALL           = 12
	FaRlParserTAKE          = 13
	FaRlParserLIMIT         = 14
	FaRlParserALLOW         = 15
	FaRlParserOVERDRAFT     = 16
	FaRlParserUP            = 17
	FaRlParserRESERVE       = 18
	FaRlParserIN            = 19
	FaRlParserSPLIT         = 20
	FaRlParserAS            = 21
	FaRlParserVAR           = 22
	FaRlParserBALANCE       = 23
	FaRlParserOF            = 24
	FaRlParserMETA          = 25
	FaRlParserKEY           = 26
	FaRlParserSET           = 27
	FaRlParserTRANSACTION   = 28
	FaRlParserMETADATA      = 29
	FaRlParserTY_ACCOUNT    = 30
	FaRlParserTY_ASSET      = 31
	FaRlParserTY_NUMBER     = 32
	FaRlParserTY_MONETARY   = 33
	FaRlParserTY_PORTION    = 34
	FaRlParserTY_STRING     = 35
	FaRlParserOP_ADD        = 36
	FaRlParserOP_SUB        = 37
	FaRlParserPERCENT       = 38
	FaRlParserLBRACK        = 39
	FaRlParserRBRACK        = 40
	FaRlParserLBRACE        = 41
	FaRlParserRBRACE        = 42
	FaRlParserDOT           = 43
	FaRlParserCOLON         = 44
	FaRlParserSTAR          = 45
	FaRlParserEQ            = 46
	FaRlParserRATIO         = 47
	FaRlParserVARIABLE_NAME = 48
	FaRlParserACCOUNT       = 49
	FaRlParserASSET         = 50
	FaRlParserNUMBER        = 51
	FaRlParserSTRING        = 52
)

// FaRlParser rules.
const (
	FaRlParserRULE_monetary      = 0
	FaRlParserRULE_literal       = 1
	FaRlParserRULE_expression    = 2
	FaRlParserRULE_portion       = 3
	FaRlParserRULE_source        = 4
	FaRlParserRULE_type_         = 5
	FaRlParserRULE_varDecl       = 6
	FaRlParserRULE_metadataValue = 7
	FaRlParserRULE_metadataEntry = 8
	FaRlParserRULE_sendClause    = 9
	FaRlParserRULE_statement     = 10
	FaRlParserRULE_script        = 11
)

// IMonetaryContext is an interface to support dynamic dispatch.
type IMonetaryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMonetaryContext differentiates from other interfaces.
	IsMonetaryContext()
}

type MonetaryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMonetaryContext() *MonetaryContext {
	var p = new(MonetaryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FaRlParserRULE_monetary
	return p
}

func (*MonetaryContext) IsMonetaryContext() {}

func NewMonetaryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MonetaryContext {
	var p = new(MonetaryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FaRlParserRULE_monetary

	return p
}

func (s *MonetaryContext) GetParser() antlr.Parser { return s.parser }

func (s *MonetaryContext) CopyFrom(ctx *MonetaryContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *MonetaryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MonetaryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type MonetaryNoPrecisionContext struct {
	*MonetaryContext
	asset  antlr.Token
	amount antlr.Token
}

func NewMonetaryNoPrecisionContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MonetaryNoPrecisionContext {
	var p = new(MonetaryNoPrecisionContext)

	p.MonetaryContext = NewEmptyMonetaryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MonetaryContext))

	return p
}

func (s *MonetaryNoPrecisionContext) GetAsset() antlr.Token { return s.asset }

func (s *MonetaryNoPrecisionContext) GetAmount() antlr.Token { return s.amount }

func (s *MonetaryNoPrecisionContext) SetAsset(v antlr.Token) { s.asset = v }

func (s *MonetaryNoPrecisionContext) SetAmount(v antlr.Token) { s.amount = v }

func (s *MonetaryNoPrecisionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MonetaryNoPrecisionContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserLBRACK, 0)
}

func (s *MonetaryNoPrecisionContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserRBRACK, 0)
}

func (s *MonetaryNoPrecisionContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FaRlParserASSET, 0)
}

func (s *MonetaryNoPrecisionContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(FaRlParserNUMBER, 0)
}

func (s *MonetaryNoPrecisionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterMonetaryNoPrecision(s)
	}
}

func (s *MonetaryNoPrecisionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitMonetaryNoPrecision(s)
	}
}

type MonetaryAllContext struct {
	*MonetaryContext
	asset     antlr.Token
	precision antlr.Token
}

func NewMonetaryAllContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MonetaryAllContext {
	var p = new(MonetaryAllContext)

	p.MonetaryContext = NewEmptyMonetaryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MonetaryContext))

	return p
}

func (s *MonetaryAllContext) GetAsset() antlr.Token { return s.asset }

func (s *MonetaryAllContext) GetPrecision() antlr.Token { return s.precision }

func (s *MonetaryAllContext) SetAsset(v antlr.Token) { s.asset = v }

func (s *MonetaryAllContext) SetPrecision(v antlr.Token) { s.precision = v }

func (s *MonetaryAllContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MonetaryAllContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserLBRACK, 0)
}

func (s *MonetaryAllContext) DOT() antlr.TerminalNode {
	return s.GetToken(FaRlParserDOT, 0)
}

func (s *MonetaryAllContext) STAR() antlr.TerminalNode {
	return s.GetToken(FaRlParserSTAR, 0)
}

func (s *MonetaryAllContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserRBRACK, 0)
}

func (s *MonetaryAllContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FaRlParserASSET, 0)
}

func (s *MonetaryAllContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(FaRlParserNUMBER, 0)
}

func (s *MonetaryAllContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterMonetaryAll(s)
	}
}

func (s *MonetaryAllContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitMonetaryAll(s)
	}
}

type MonetaryLitContext struct {
	*MonetaryContext
	asset     antlr.Token
	precision antlr.Token
	amount    antlr.Token
}

func NewMonetaryLitContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MonetaryLitContext {
	var p = new(MonetaryLitContext)

	p.MonetaryContext = NewEmptyMonetaryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MonetaryContext))

	return p
}

func (s *MonetaryLitContext) GetAsset() antlr.Token { return s.asset }

func (s *MonetaryLitContext) GetPrecision() antlr.Token { return s.precision }

func (s *MonetaryLitContext) GetAmount() antlr.Token { return s.amount }

func (s *MonetaryLitContext) SetAsset(v antlr.Token) { s.asset = v }

func (s *MonetaryLitContext) SetPrecision(v antlr.Token) { s.precision = v }

func (s *MonetaryLitContext) SetAmount(v antlr.Token) { s.amount = v }

func (s *MonetaryLitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MonetaryLitContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserLBRACK, 0)
}

func (s *MonetaryLitContext) DOT() antlr.TerminalNode {
	return s.GetToken(FaRlParserDOT, 0)
}

func (s *MonetaryLitContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserRBRACK, 0)
}

func (s *MonetaryLitContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FaRlParserASSET, 0)
}

func (s *MonetaryLitContext) AllNUMBER() []antlr.TerminalNode {
	return s.GetTokens(FaRlParserNUMBER)
}

func (s *MonetaryLitContext) NUMBER(i int) antlr.TerminalNode {
	return s.GetToken(FaRlParserNUMBER, i)
}

func (s *MonetaryLitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterMonetaryLit(s)
	}
}

func (s *MonetaryLitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitMonetaryLit(s)
	}
}

type MonetaryAssetOnlyContext struct {
	*MonetaryContext
	asset antlr.Token
}

func NewMonetaryAssetOnlyContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MonetaryAssetOnlyContext {
	var p = new(MonetaryAssetOnlyContext)

	p.MonetaryContext = NewEmptyMonetaryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MonetaryContext))

	return p
}

func (s *MonetaryAssetOnlyContext) GetAsset() antlr.Token { return s.asset }

func (s *MonetaryAssetOnlyContext) SetAsset(v antlr.Token) { s.asset = v }

func (s *MonetaryAssetOnlyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MonetaryAssetOnlyContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserLBRACK, 0)
}

func (s *MonetaryAssetOnlyContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(FaRlParserRBRACK, 0)
}

func (s *MonetaryAssetOnlyContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FaRlParserASSET, 0)
}

func (s *MonetaryAssetOnlyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterMonetaryAssetOnly(s)
	}
}

func (s *MonetaryAssetOnlyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitMonetaryAssetOnly(s)
	}
}

func (p *FaRlParser) Monetary() (localctx IMonetaryContext) {
	localctx = NewMonetaryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FaRlParserRULE_monetary)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		localctx = NewMonetaryLitContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(24)
			p.Match(FaRlParserLBRACK)
		}
		{
			p.SetState(25)

			var _m = p.Match(FaRlParserASSET)

			localctx.(*MonetaryLitContext).asset = _m
		}
		{
			p.SetState(26)
			p.Match(FaRlParserDOT)
		}
		{
			p.SetState(27)

			var _m = p.Match(FaRlParserNUMBER)

			localctx.(*MonetaryLitContext).precision = _m
		}
		{
			p.SetState(28)

			var _m = p.Match(FaRlParserNUMBER)

			localctx.(*MonetaryLitContext).amount = _m
		}
		{
			p.SetState(29)
			p.Match(FaRlParserRBRACK)
		}

	case 2:
		localctx = NewMonetaryAllContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(30)
			p.Match(FaRlParserLBRACK)
		}
		{
			p.SetState(31)

			var _m = p.Match(FaRlParserASSET)

			localctx.(*MonetaryAllContext).asset = _m
		}
		{
			p.SetState(32)
			p.Match(FaRlParserDOT)
		}
		{
			p.SetState(33)

			var _m = p.Match(FaRlParserNUMBER)

			localctx.(*MonetaryAllContext).precision = _m
		}
		{
			p.SetState(34)
			p.Match(FaRlParserSTAR)
		}
		{
			p.SetState(35)
			p.Match(FaRlParserRBRACK)
		}

	case 3:
		localctx = NewMonetaryNoPrecisionContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(36)
			p.Match(FaRlParserLBRACK)
		}
		{
			p.SetState(37)

			var _m = p.Match(FaRlParserASSET)

			localctx.(*MonetaryNoPrecisionContext).asset = _m
		}
		{
			p.SetState(38)

			var _m = p.Match(FaRlParserNUMBER)

			localctx.(*MonetaryNoPrecisionContext).amount = _m
		}
		{
			p.SetState(39)
			p.Match(FaRlParserRBRACK)
		}

	case 4:
		localctx = NewMonetaryAssetOnlyContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(40)
			p.Match(FaRlParserLBRACK)
		}
		{
			p.SetState(41)

			var _m = p.Match(FaRlParserASSET)

			localctx.(*MonetaryAssetOnlyContext).asset = _m
		}
		{
			p.SetState(42)
			p.Match(FaRlParserRBRACK)
		}

	}

	return localctx
}

// ILiteralContext is an interface to support dynamic dispatch.
type ILiteralContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLiteralContext differentiates from other interfaces.
	IsLiteralContext()
}

type LiteralContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLiteralContext() *LiteralContext {
	var p = new(LiteralContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FaRlParserRULE_literal
	return p
}

func (*LiteralContext) IsLiteralContext() {}

func NewLiteralContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LiteralContext {
	var p = new(LiteralContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FaRlParserRULE_literal

	return p
}

func (s *LiteralContext) GetParser() antlr.Parser { return s.parser }

func (s *LiteralContext) CopyFrom(ctx *LiteralContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *LiteralContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LiteralContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type LitAccountContext struct {
	*LiteralContext
}

func NewLitAccountContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LitAccountContext {
	var p = new(LitAccountContext)

	p.LiteralContext = NewEmptyLiteralContext()
	p.parser = parser
	p.CopyFrom(ctx.(*LiteralContext))

	return p
}

func (s *LitAccountContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LitAccountContext) ACCOUNT() antlr.TerminalNode {
	return s.GetToken(FaRlParserACCOUNT, 0)
}

func (s *LitAccountContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterLitAccount(s)
	}
}

func (s *LitAccountContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitLitAccount(s)
	}
}

type LitAssetContext struct {
	*LiteralContext
}

func NewLitAssetContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LitAssetContext {
	var p = new(LitAssetContext)

	p.LiteralContext = NewEmptyLiteralContext()
	p.parser = parser
	p.CopyFrom(ctx.(*LiteralContext))

	return p
}

func (s *LitAssetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LitAssetContext) ASSET() antlr.TerminalNode {
	return s.GetToken(FaRlParserASSET, 0)
}

func (s *LitAssetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterLitAsset(s)
	}
}

func (s *LitAssetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitLitAsset(s)
	}
}

type LitMonetaryContext struct {
	*LiteralContext
}

func NewLitMonetaryContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LitMonetaryContext {
	var p = new(LitMonetaryContext)

	p.LiteralContext = NewEmptyLiteralContext()
	p.parser = parser
	p.CopyFrom(ctx.(*LiteralContext))

	return p
}

func (s *LitMonetaryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LitMonetaryContext) Monetary() IMonetaryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMonetaryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMonetaryContext)
}

func (s *LitMonetaryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterLitMonetary(s)
	}
}

func (s *LitMonetaryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitLitMonetary(s)
	}
}

type LitNumberContext struct {
	*LiteralContext
}

func NewLitNumberContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *LitNumberContext {
	var p = new(LitNumberContext)

	p.LiteralContext = NewEmptyLiteralContext()
	p.parser = parser
	p.CopyFrom(ctx.(*LiteralContext))

	return p
}

func (s *LitNumberContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LitNumberContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(FaRlParserNUMBER, 0)
}

func (s *LitNumberContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.EnterLitNumber(s)
	}
}

func (s *LitNumberContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FaRlListener); ok {
		listenerT.ExitLitNumber(s)
	}
}

func (p *FaRlParser) Literal() (localctx ILiteralContext) {
	localctx = NewLiteralContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FaRlParserRULE_literal)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(49)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case FaRlParserACCOUNT:
		localctx = NewLitAccountContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(45)
			p.Match(FaRlParserACCOUNT)
		}

	case FaRlParserASSET:
		localctx = NewLitAssetContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(46)
			p.Match(FaRlParserASSET)
		}

	case FaRlParserNUMBER:
		localctx = NewLitNumberContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(47)
			p.Match(FaRlParserNUMBER)
		}

	case FaRlParserLBRACK:
		localctx = NewLitMonetaryContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(48)
			p.Monetary()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FaRlParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FaRlParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) CopyFrom(ctx *ExpressionContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ExprAddSubContext struct {
	*ExpressionContext
	lhs IExpressionContext
	op  antlr.Token
	rhs IExpressionContext
}

func NewExprAddSubContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExprAddSubContext {
	var p = new(ExprAddSubContext)

	p.ExpressionContext = NewEmptyExpressionContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExpressionContext))

	return p
}

func (s *ExprAddSubContext) GetOp() antlr.Token { return s.op }

func (s *ExprAddSubContext) SetOp(v antlr.Token) { s.op = v }

func (s *ExprAddSubContext) GetLhs() IExpressionContext { return s.lhs }

func (s *ExprAddSubContext) GetRhs() IExpressionContext { return s.rhs }

func (s *ExprAddSubContext) SetLhs(v IExpressionContext) { s.lhs = v }

func (s *ExprAddSubContext) SetRhs(v IExpressionContext) { s.rhs = v }

func (s *ExprAddSubContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprAddSubContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *ExprAddSubContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExprAddSubContext) OP_ADD() antlr.TerminalNode {
	return s.GetToken(FaRlParserOP_ADD, 0)
}
